# reddit-corpus

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-corpus-as-notebook.md  0002-reddit-api-pre-approval.md
docs/ai/: reddit-scraper-decisions.md  reddit-scraper-design.md  reddit-scraper-plan.md  reddit-scraper-requirements.md  reddit-scraper-slices.md  reddit-scraper-status.md
scripts/: check-prereqs.ps1  check-prereqs.sh  check_prereqs.py
src/reddit_corpus/: __init__.py  config.py
src/reddit_corpus/cli/: __init__.py  _common.py  auth_cmd.py  comments_cmd.py  ingest_cmd.py  main.py  posts_cmd.py  render.py  subs_cmd.py  thread_cmd.py
src/reddit_corpus/corpus/: __init__.py  comments.py  posts.py  schema.py  subreddits.py
src/reddit_corpus/reddit/: __init__.py  client.py  ingest.py  ratelimit.py
tests/: test_smoke.py
tests/fakes/: praw_fakes.py
tests/unit/: test_check_prereqs.py  test_cli_auth.py  test_cli_ingest.py  test_cli_read.py  test_comments.py  test_config.py  test_expand_thread.py  test_posts.py  test_ratelimit.py  test_reddit_client.py  test_reddit_ingest.py  test_schema.py  test_subreddits_dao.py
